--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "joi": "^14.0.6",
+    "morgan": "^1.9.1",
+    "sequelize": "^4.41.1",
+    "sqlite3": "^4.0.4"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
